# rpstone

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml
bags/: rps.bag
gesture_detection/: Openposesub.js
gesture_detector/: CMakeLists.txt  package.xml
gesture_detector/launch/: classifier_nodepth.launch  test.launch
gesture_detector/src/: Gestures.js  Openposesub.js  package-lock.json  package.json
msg/: Gesture.msg
rpstone/: CMakeLists.txt  package.xml
rpstone/bags/: hands.bag
rpstone/config/: components.yaml  pipes.yaml  robot_description.yaml
rpstone/launch/: action_assistant.launch  bag_gestures.launch  robotont_sim_driver.launch  rpstone_sim.launch  run.launch  temoto.launch  usb_cam_remappable.launch
rpstone/src/: component_manager.cpp  gesture_confirmation_node.cpp  rpstone.cpp  rpstone_frame.cpp  twist_cmd.cpp  winner.cpp
temoto_actions/ta_game_logic/: package.xml
temoto_actions/ta_initialize_robot/test/: ta_initialize_robot.umrfg.json
temoto_actions/ta_navigate_robot/: CMakeLists.txt
temoto_actions/ta_navigate_robot/launch/: invoke_action.launch
temoto_actions/ta_navigate_robot/src/: ta_drive_robot.cpp  ta_navigate_robot.cpp
temoto_actions/ta_navigate_robot/test/: ta_navigate_robot.umrfg.json
temoto_actions/ta_robot1_init/: CMakeLists.txt
temoto_actions/ta_robot1_init/test/: ta_robot1_init.umrfg.json
temoto_actions/ta_robot1_viz/: CMakeLists.txt  package.xml  umrf.json
temoto_actions/ta_robot1_viz/launch/: invoke_action.launch
temoto_actions/ta_robot2_init/: CMakeLists.txt  package.xml
temoto_actions/ta_robot2_viz/: CMakeLists.txt  umrf.json
temoto_actions/ta_robot2_viz/launch/: invoke_action.launch
temoto_actions/ta_rps_pipe/: CMakeLists.txt  package.xml  umrf.json
temoto_actions/ta_rps_pipe/include/ta_rps_pipe/: temoto_action.h
temoto_actions/ta_rps_pipe/launch/: invoke_action.launch
temoto_actions/ta_rps_pipe/src/: ta_rps_pipe.cpp
temoto_actions/ta_rps_pipe/test/: ta_rps_pipe.umrfg.json
temoto_tutorials/tutorials_temoto_config/temoto_actions/ta_game_logic/: CMakeLists.txt  umrf.json
temoto_tutorials/tutorials_temoto_config/temoto_actions/ta_game_logic/launch/: invoke_action.launch
temoto_tutorials/tutorials_temoto_config/temoto_actions/ta_game_logic/src/: ta_game_logic.cpp
temoto_tutorials/tutorials_temoto_config/temoto_actions/ta_game_logic/test/: ta_game_logic.umrfg.json
temoto_tutorials/tutorials_temoto_config/temoto_actions/ta_robot1_init/: package.xml  umrf.json
temoto_tutorials/tutorials_temoto_config/temoto_actions/ta_robot1_init/launch/: invoke_action.launch
temoto_tutorials/tutorials_temoto_config/temoto_actions/ta_robot2_init/: umrf.json
temoto_tutorials/tutorials_temoto_config/temoto_actions/ta_robot2_viz/: package.xml
temoto_tutorials/tutorials_temoto_config/tutorials_temoto_config/config/: robot_description.yaml
temoto_tutorials/tutorials_temoto_config/tutorials_temoto_config/launch/: robotont_sim_driver.launch
umrf_graphs/: robotont_sim_1_nav_cycle.umrfg.json  robotont_sim_cycle.umrfg.json  rps_game.umrfg.json
(+13 files in other folders)
